# sqlx-data

./: .env.template  Cargo.toml  docker-compose.yml  readme.md
book/src/: 02-quick-start.md  04-your-first-repository.md
examples/axum-crud-api/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
sqlx-data/: Cargo.toml
sqlx-data-integration/: Cargo.toml  README.md
sqlx-data-integration/src/: lib.rs  sqlx_types.rs
sqlx-data-macros/: Cargo.toml
sqlx-data-macros/src/: code_generator.rs  constants.rs  dml.rs  error.rs  fetch.rs  lib.rs  method_variants.rs  repo_system.rs  scope_system.rs  type_analyzer.rs  type_system.rs
sqlx-data-params/: Cargo.toml  README.md
sqlx-data-params/src/: builder.rs  cursor.rs  filter.rs  lib.rs  pagination.rs  params.rs  response.rs  search.rs  serial.rs  slice.rs  sort.rs
sqlx-data-params/src/adapter/: mod.rs  sqlx.rs
sqlx-data-parser/: Cargo.toml
sqlx-data-parser/src/: constants.rs  lib.rs
sqlx-data-parser/src/dynamic/: builder.rs
sqlx-data-parser/tests/: statement_detection.rs
test-integration-postgresql/tests/: casting_stress_test.rs  generate_versions_test.rs  insert_batch_test.rs  insert_json_test.rs  integration_test.rs  json_postgresql_test.rs  pagination_cursor_test.rs  parameter_naming_test.rs  pool_parameter_test.rs  pool_raw_parameter_test.rs  serial_simple_test.rs  tuple_test.rs
test-integration-sqlite/: Cargo.toml
test-integration-sqlite/tests/: blob_test.rs  chrono_test.rs
test-integration-sqlite/tests/migrations/: 20241201120000_create_users.sql
