[workspace]
resolver = "2"
members = [
    "sqlx-data",
    "sqlx-data-macros",
    "sqlx-data-params",
    "sqlx-data-parser",
    "sqlx-data-integration",
    # Integration tests - not published to crates.io
    # "test-integration-sqlite",
    # "test-integration-mysql",
    # "test-integration-postgresql",
]
default-members = ["sqlx-data"]

# Exclude test packages from crates.io publishing
exclude = [
    "test-integration-*"
]

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.94"
authors = ["Jose Carmo <jose.rcarmo@gmail.com>"]
license = "MIT"
repository = "https://github.com/josercarmo/sqlx-data"
homepage = "https://github.com/josercarmo/sqlx-data"
documentation = "https://docs.rs/sqlx-data"
description = "Zero-boilerplate Repository Pattern for modern Rust applications. Write SQL traits, get async implementations with sophisticated pagination, streaming, batch operations, and more. Seamlessly integrates with existing SQLx code."
keywords = ["sqlx", "repository", "orm", "macros", "pagination"]

[workspace.dependencies]
sqlx = { version = "0.9.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive","std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
base64 = "0.22"
prettyplease = "0.2"
sqlparser = { version = "0.60.0", default-features = false, features = ["std"] }
fancy-regex = "0.17"
tracing = { version = "0.1" }
moka = { version = "0.12", features = ["sync"] }
dashmap = "6.1"
ahash = "0.8"
futures = { version = "0.3" }
thiserror = "2.0.17"
# jiff-sqlx 0.2 aligns with SQLx 0.9; enabling `std` on jiff restores `std::error::Error`
# for `jiff::Error` when `?` converts into boxed trait objects.
jiff = { version = "0.2.27", default-features = false, features = ["std"] }
jiff-sqlx = { version = "0.2.0", default-features = false }
sqlx-data = { version = "0.1.0", path = "sqlx-data" }
sqlx-data-params = { version = "0.1.0", path = "sqlx-data-params" }
sqlx-data-parser = { version = "0.1.0", path = "sqlx-data-parser" }
sqlx-data-macros = { version = "0.1.0", path = "sqlx-data-macros" }
sqlx-data-integration = { version = "0.1.0", path = "sqlx-data-integration" }


# Dev dependencies
bytes = "1.11"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tempfile = "3.24"
tracing-subscriber = { version = "0.3", default-features = false }
