[package]
name = "axumlive"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
sqlx-data = { version = "0.1.5", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"