[package]
name = "hello-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "macros","sqlite"] }
#sqlx = { workspace = true, features = ["runtime-tokio","tls-rustls","sqlite","derive","macros","migrate","json","chrono"]}
sqlx-data = { workspace = true, features = ["sqlite", "json"]}
tokio = { workspace = true }

